extends PanelContainer

signal slot_clicked(index: int)
signal recycle_requested(index: int)

@onready var icon_rect: TextureRect = %IconRect
@onready var name_label: Label = %NameLabel
@onready var rarity_label: Label = %RarityLabel

var _index: int = -1
var _item: ItemInstance = null
var _checkbox: Panel = null
var _is_preview: bool = false

# é™æ€å˜é‡ç”¨äºäº¤äº’æ¨¡å¼ï¼ˆä¿ç•™ä»¥æ”¯æŒåŸæœ‰é€»è¾‘ï¼Œä½†ä¸»è¦é€»è¾‘è½¬å…¥ InventorySystemï¼‰
static var selection_mode_data: Dictionary = {}


@onready var state_border: Panel = $StateBorder

# é™æ€å˜é‡ç”¨äºäº¤äº’æ¨¡å¼ï¼ˆä¿ç•™ä»¥æ”¯æŒåŸæœ‰é€»è¾‘ï¼Œä½†ä¸»è¦é€»è¾‘è½¬å…¥ InventorySystemï¼‰
static var selection_mode_data: Dictionary = {}


func _ready() -> void:
	print("[InventorySlot] Slot %d ready. Parent: %s" % [_index, get_parent().name if get_parent() else "null"])
	# ç¡®ä¿ StateBorder æ­£å¸¸é…ç½®
	if state_border:
		state_border.mouse_filter = Control.MOUSE_FILTER_IGNORE


func setup(item: ItemInstance, index: int) -> void:
	_index = index
	_item = item
	_is_preview = false
	print("[InventorySlot] Slot %d setup with item: %s" % [_index, item.get_display_name() if item else "null"])
	
	_update_visuals()


func setup_preview(item_data: ItemData, rarity: int, is_fulfilled: bool = false) -> void:
	_index = -1
	_item = null
	_is_preview = true
	print("[InventorySlot] Slot setup as preview")
	
	# 1. åŸºç¡€æ ·å¼
	if item_data == null:
		name_label.text = ""
		rarity_label.text = ""
		icon_rect.texture = null
		self.theme_type_variation = "Slot_Empty"
	else:
		name_label.text = item_data.name
		rarity_label.text = Constants.rarity_display_name(rarity)
		icon_rect.texture = item_data.icon
		
		# ä½¿ç”¨åŸºç¡€å˜ä½“
		var rarity_key = Constants.rarity_id(rarity).capitalize()
		self.theme_type_variation = "Slot_" + rarity_key
		
		# å¼ºåˆ¶è®¾ç½®æ·±è‰²å­—ä½“
		name_label.add_theme_color_override("font_color", Constants.COLOR_TEXT_MAIN)
		var border_col = Constants.get_rarity_border_color(rarity)
		rarity_label.add_theme_color_override("font_color", border_col.darkened(0.2))

	# 2. é¢„è§ˆæ¨¡å¼äº¤äº’çŠ¶æ€
	self.mouse_filter = Control.MOUSE_FILTER_PASS
	self.modulate = Color.WHITE
	
	if is_fulfilled:
		rarity_label.text = "âœ… " + rarity_label.text
		if state_border:
			state_border.theme_type_variation = "Border_Fulfilled"
	else:
		self.modulate = Color(1, 1, 1, 0.7)
		if state_border:
			state_border.theme_type_variation = "Border_None"


func _update_visuals() -> void:
	# 1. åŸºç¡€å†…å®¹ä¸å˜ä½“
	if _item == null:
		name_label.text = ""
		rarity_label.text = ""
		icon_rect.texture = null
		self.theme_type_variation = "Slot_Empty"
	else:
		name_label.text = _item.get_display_name()
		
		var rarity_text = Constants.rarity_display_name(_item.rarity)
		if GameManager.current_ui_mode == Constants.UIMode.RECYCLE:
			var val = Constants.rarity_recycle_value(_item.rarity)
			rarity_text += " (+%d)" % val
		rarity_label.text = rarity_text
		
		icon_rect.texture = _item.item_data.icon
		
		# è®¾ç½®åŸºç¡€å˜ä½“
		var rarity_key = Constants.rarity_id(_item.rarity).capitalize()
		self.theme_type_variation = "Slot_" + rarity_key
		
		# å­—ä½“é¢œè‰²
		name_label.add_theme_color_override("font_color", Constants.COLOR_TEXT_MAIN)
		var border_col = Constants.get_rarity_border_color(_item.rarity)
		rarity_label.add_theme_color_override("font_color", border_col.darkened(0.2))
		
		if _item.sterile:
			name_label.text += " ğŸš«"

	# 2. äº¤äº’çŠ¶æ€
	_update_interaction_visuals()


var _selection_tween: Tween

func _update_interaction_visuals() -> void:
	if not state_border: return
	
	var mode = GameManager.current_ui_mode
	var is_multi_selected = _index in InventorySystem.multi_selected_indices
	var is_active_selection = (mode == Constants.UIMode.NORMAL and InventorySystem.selected_slot_index == _index)
	
	# DEBUG: Trace selection logic
	print("[InventorySlot] Slot %d UPDATE visuals. Active: %s. Mode: %d. SelectedIdx: %d" % [_index, is_active_selection, mode, InventorySystem.selected_slot_index])
	
	# å¤„ç†é€‰ä¸­åŠ¨ç”» (å‡¸å‡º + æµ®åŠ¨)
	_animate_selection(is_active_selection)
	
	# é‡ç½®é€æ˜åº¦
	self.modulate = Color.WHITE
	state_border.theme_type_variation = "Border_None"

	# åŸºç¡€é«˜äº®ï¼šæ•´ç†æ¨¡å¼çš„å•é€‰
	if is_active_selection:
		state_border.theme_type_variation = "Border_Replace" # Amber for current selection
		return

	# æ¨¡å¼ç‰¹å®šé«˜äº®
	match mode:
		Constants.UIMode.SUBMIT:
			if is_multi_selected:
				state_border.theme_type_variation = "Border_Selected"
			else:
				if _item: self.modulate.a = 0.8 # æœªé€‰ä¸­å˜æš—
		
		Constants.UIMode.RECYCLE:
			if is_multi_selected:
				state_border.theme_type_variation = "Border_Recycle"
			else:
				if _item: self.modulate.a = 0.8

		Constants.UIMode.REPLACE:
			if _item:
				if _item.item_data.item_type == Constants.ItemType.MAINLINE:
					self.modulate.a = 0.3 # ä¸»çº¿ä¸å¯é€‰
				else:
					state_border.theme_type_variation = "Border_Replace"


func _animate_selection(active: bool) -> void:
	if active:
		if _selection_tween and _selection_tween.is_valid():
			return # å·²ç»åœ¨æ’­æ”¾åŠ¨ç”»
			
		print("[InventorySlot] Slot %d STARTING animation." % _index)
		
		# ç¡®ä¿å›¾å±‚åœ¨æœ€ä¸Šå±‚
		self.z_index = 10
		self.pivot_offset = self.size / 2
		
		# åˆ›å»ºåŠ¨ç”»
		_selection_tween = create_tween().set_loops()
		_selection_tween.set_parallel(true)
		
		# 1. å‡¸å‡ºæ•ˆæœ (Pop out) - åˆå§‹æ”¾å¤§
		var t_scale = create_tween()
		t_scale.tween_property(self, "scale", Vector2(1.15, 1.15), 0.2) \
			.set_trans(Tween.TRANS_BACK).set_ease(Tween.EASE_OUT)
			
		# 2. ä¸Šä¸‹æµ®åŠ¨ (Float) - ä½¿ç”¨ç›¸å¯¹ä½ç§»æ¨¡æ‹Ÿæ‚¬æµ®
		_selection_tween.tween_property(self, "position:y", -4.0, 1.0) \
			.as_relative().set_trans(Tween.TRANS_SINE).set_ease(Tween.EASE_IN_OUT)
		_selection_tween.tween_property(self, "position:y", 4.0, 1.0) \
			.as_relative().set_trans(Tween.TRANS_SINE).set_ease(Tween.EASE_IN_OUT)
			
	else:
		if _selection_tween:
			print("[InventorySlot] Slot %d STOPPING animation." % _index)
			_selection_tween.kill()
			_selection_tween = null
		
		if self.z_index != 0:
			self.z_index = 0
			
			# å¤ä½åŠ¨ç”»
			var t = create_tween()
			t.set_parallel(true)
			t.tween_property(self, "scale", Vector2.ONE, 0.2) \
				.set_trans(Tween.TRANS_QUAD).set_ease(Tween.EASE_OUT)
				
			# å¼ºåˆ¶çˆ¶å®¹å™¨é‡æ–°æ’åºä»¥ä¿®æ­£ä½ç½®
			if get_parent() is Container:
				get_parent().queue_sort()


func _gui_input(event: InputEvent) -> void:
	if _is_preview: return # é¢„è§ˆæ¨¡å¼ä¸å“åº”ç‚¹å‡»
	
	if event is InputEventMouseButton and event.pressed:
		print("[InventorySlot] Slot %d CLICKED. Button: %d. Mode: %d" % [_index, event.button_index, GameManager.current_ui_mode])
		if event.button_index == MOUSE_BUTTON_LEFT:
			# 1. ä¼˜å…ˆå¤„ç†ç‰¹æ®Šé€‰æ‹©æ¨¡å¼ (Trade-in)
			if GameManager.current_ui_mode == Constants.UIMode.REPLACE:
				_handle_selection_mode_click()
				return
			
			# 2. å¤„ç†å¤šé€‰æ¨¡å¼ (æäº¤/å›æ”¶)
			if GameManager.current_ui_mode in [Constants.UIMode.SUBMIT, Constants.UIMode.RECYCLE]:
				if _item != null:
					if _index in InventorySystem.multi_selected_indices:
						InventorySystem.multi_selected_indices.erase(_index)
					else:
						InventorySystem.multi_selected_indices.append(_index)
					InventorySystem.multi_selection_changed.emit(InventorySystem.multi_selected_indices)
				return

			# 3. æ™®é€šæ•´ç†æ¨¡å¼
			slot_clicked.emit(_index)
		
		elif event.button_index == MOUSE_BUTTON_RIGHT:
			if GameManager.current_ui_mode == Constants.UIMode.NORMAL and _item != null:
				recycle_requested.emit(_index)


func _handle_selection_mode_click() -> void:
	if _item == null:
		return
		
	var mode_type = selection_mode_data.get("type")
	var callback = selection_mode_data.get("callback")
	
	if mode_type == "trade_in":
		if _item.item_data.item_type == Constants.ItemType.MAINLINE:
			return # ä¸»çº¿ç‰©å“ä¸å¯ç½®æ¢
		
		if callback is Callable:
			callback.call(_item)
		
		# å®Œæˆåé€€å‡ºé€‰æ‹©æ¨¡å¼
		selection_mode_data = {}
		GameManager.current_ui_mode = Constants.UIMode.NORMAL
		InventorySystem.inventory_changed.emit(InventorySystem.inventory)
